--- a/src/css/singupRes.css
+++ b/src/css/singupRes.css
@@ -93,7 +93,7 @@
     .signup-container {
         width: 50%;
         padding: 40px;
-        margin-top:425px;
+        margin: top 400px;
     }
 
     .signup-title {
